2008-09-13  Tor Lillqvist  <tml@novell.com>

	* glib/gutils.h
	* glib/gwin32.h: Deprecate G_WIN32_DLLMAIN_FOR_DLL_NAME(),
	g_win32_get_package_installation_directory() and
	g_win32_get_package_installation_subdirectory() as their
	documentation has warned for a while. Sorry that I forgot to do
	this before 2.18.0.

	* glib/gwin32.c (g_win32_get_package_installation_directory):
	Print a warning if a non-NULL package parameter is passed to this
	function, as that is deprecated usage, as the documentation says.

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 548321 – <string.h> is not included in gi18n-lib.h

	* glib/gi18n.h:
	* glib/gi18n-lib.h: Include string.h, since strlen is used in 
	the macros. Pointed out by Ignacio Casal Quinteiro

2008-09-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 551731 – g_date_set_time[_t] docs should mention what timezone

	* glib/gdate.c (g_date_set_time, g_date_set_time_t): Documentation
	improvements proposed by Owen Taylor.

2008-09-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 551410 – gtestutils.c: using printf without prototype

	* glib/gtestutils.c: Include stdio.h. Pointed out by Kazuki Iwamoto.

2008-09-09  Matthias Clasen  <mclasen@redhat.com>

	Bug 551228 – G_STRFUNC on recent Sun compiler should be expanded to
	__func__ rather than '???'

	* glib/gmacros.h: Don't use glibconfig.h defines in gmacros.h,
	as the comment up top says. Instead look at __STDC_VERSION__.
	Problem reported by Lin Ma.

2008-09-09  Matthias Clasen  <mclasen@redhat.com>

	Bug 523463 – Core dump in gmain.c:2482:IA__g_main_context_check()

	* glib/gmain.c (g_main_context_check): Be robust against setting
	event fields on the fly, as e.g. happens in linc. Tracked down
	by Paul Smith, fix proposed by Owen Taylor.

2008-09-08  Christian Dywan  <christian@imendio.com>

	Bug 550433 – g_test_init doesn't recognize --help

	* glib/gtestutils.c (parse_args): Add detailed --help output

2008-09-02  Matthias Clasen  <mclasen@redhat.com>
